# omi

./: .gitignore  docker-compose.yml  justfile
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
hole/: .pdm-python  Dockerfile  main.py  pyproject.toml  requirements.txt
user_conf.d/: default.conf
